test/loop/confidence/errors/comp_errors_2.loop
# Errors in pattern matching functions

func() ->
  x for x [1, 2, 3]

